--- a/manifest.json
+++ b/manifest.json
@@ -53,9 +53,15 @@
         "appid" : "wx09823b98e251a460",
         "setting" : {
             "urlCheck" : false,
-			"checkSiteMap": false
+            "checkSiteMap" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+		"requiredPrivateInfos": ["chooseAddress"],
+        "permission" : {
+            "scope.userLocation" : {
+                "desc" : ""
+            }
+        }
     },
     "vueVersion" : "2"
 }
