完成了登录与支付的功能开发

--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,7 @@
 		"requiredPrivateInfos": ["chooseAddress"],
         "permission" : {
             "scope.userLocation" : {
-                "desc" : ""
+                "desc" : "用于获取用户位置信息"
             }
         }
     },
